bug: category image overflow fixed

--- a/CSS/stylibook.css
+++ b/CSS/stylibook.css
@@ -20,6 +20,7 @@
     position: relative;
     max-height: 25rem;
     max-width: 25rem;
+    overflow: hidden;
     cursor: pointer;
     margin: var(--margin-medium);
 }
